--- a/index.html
+++ b/index.html
@@ -160,25 +160,12 @@
     <div class="footer-right">
 
       <div class="mapouter">
-        <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
+        <div class="gmap_canvas"><iframe id="gmap_canvas"
             src="https://maps.google.com/maps?q=kathmandu&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
             scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br>
-          <style>
-            .mapouter {
-              position: relative;
-              text-align: right;
-              height: 300px;
-              width: 400px;
-            }
-          </style><a href="https://www.embedgooglemap.net"></a>
-          <style>
-            .gmap_canvas {
-              overflow: hidden;
-              background: none !important;
-              height: 300px;
-              width: 400px;
-            }
-          </style>
+
+           <a href="https://www.embedgooglemap.net"></a>
+         
         </div>
       </div>
 
