--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  
   <title>Travelmandu</title>
+
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
@@ -135,9 +136,7 @@
 
     <div class="footerleft">
       <img class="footerlogo" src="images/Logo.svg" alt="travelmandu">
-      <p class="footer_para">A paragraph is a series of sentences that are organized and coherent, and are all related
-        to a single topic.
-        Almost every piece of writing you do that is longer than a few sentences should be organized into paragraphs.
+      <p class="footer_para">A paragraph is a series of sentences that are organized and coherent, and are all related to a single topic. Almost every piece of writing you do that is longer than a few sentences should be organized into paragraphs.
       </p>
 
       <div class="social_icons">
